Bug Fixed - IRL
IRL output wasn't updated.

So changed the inner consts to parse to number to make calculus..

- Main scrollbar remove

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,7 +36,11 @@
 
 body, html {
 	height: 100%;
-	font-family: Poppins-Regular, sans-serif;
+  font-family: Poppins-Regular, sans-serif;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 /*---------------------------------------------*/
